[package]
name = "trie-count"
version = "0.1.0"
authors = ["Daniel Lehmann <mail@dlehmann.eu>"]
description = "Organizes the input lines in a prefix tree (i.e., merging all equal prefixes into a single node), then counts elements in the subtrees, and outputs the tree level by level with indentation. Useful for example to quickly cluster file names or other strings and see which prefixes are most frequent."
edition = "2021"

[[bin]]
name = "tc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.2", features = ["derive", "cargo"] }
regex = {version = "1.8.4", features = ["pattern"] }

[dev-dependencies]
rand = "0.8.5"
walkdir = "2.3.3"
unicode-segmentation = "1.10.1"

[profile.release]
overflow-checks = true
lto = true
